# demogine

./: .ignore  Cargo.toml  imgui.ini  readme.me
.github/instructions/: default.instructions.md
assets/: spacefarjan.gltf
assets/can/: can.gltf
assets/shaders/: frustum_culling.wgsl  fullscreen_quad.wgsl  gather_instance_data.wgsl  generate_draws.wgsl  shader.wgsl
assets/shaders/deferred/: geometry.wgsl
assets/shaders/shared/: camera.wgsl  commands.wgsl  drawable.wgsl  frustum.wgsl  instancing.wgsl  material_info.wgsl  mesh_info.wgsl
assets/tolkki2/: tolkki2.gltf
src/: camera.rs  demo.rs  engine.rs  global_uniform.rs  main.rs  material_manager.rs  model.rs  render_common.rs  shader.wgsl  shader_loader.rs  texture.rs  window.rs
src/asset_pipeline/: generate_tangents.rs  materials.rs  mesh_baker.rs  mod.rs
src/math/: bounds.rs  frustum.rs  mod.rs  plane.rs
src/passes/: background_pass.rs  mod.rs  pass.rs  pbr_pass.rs
src/rendering/: config.rs  frustum_culling.rs  global_uniform.rs  imgui_renderer.rs  instance.rs  instance_manager.rs  mesh_buffers.rs  mod.rs  render_camera.rs  render_common.rs  render_material_manager.rs  render_model.rs  renderer.rs  shader_loader.rs
src/rendering/deferred/: gbuffer.rs  geometry_pass.rs  mod.rs
src/rendering/instancing/: draw_command_generator.rs  drawable.rs  drawable_buffers.rs  mod.rs  (+6 more)
src/scene/: mod.rs  object3d.rs  scene.rs  scene_model.rs
src/scene_graph/: mod.rs  object3d.rs  scene.rs  scene_model.rs  transform.rs
src/shaders/: fullscreen_quad.wgsl  shader.wgsl
tools/substance/: Engine2025.spexp
(+8 files in other folders)
