[package]
name = "demogine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bytemuck = { version = "1.20.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
gltf = { version = "1.4.1", features = ["extras", "names"] }
id-arena = "2.2.1"
itertools = "0.13.0"
log = "0.4.22"
notify-debouncer-mini = "0.6.0"
pollster = "0.4.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = "1.42.0"
wgpu = "25.0"
winit = { version = "0.30" }
