[package]
name = "demogine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bytemuck = { version = "1.20.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
gltf = { version = "1.4.1", features = ["extras", "names"] }
id-arena = { version = "2.2.1", features = ["rayon"] }
imgui = "0.12.0"
imgui-wgpu = "0.25.0"
imgui-winit-support = "0.13.0"
itertools = "0.13.0"
log = "0.4.22"
naga = { version = "25.0.1", features = ["wgsl-out"] }
naga_oil = { git = "https://github.com/bevyengine/naga_oil.git", rev = "6eee1e6fa4d91bb1c1ecfdc072d33df5e7997d4d" }
notify-debouncer-mini = "0.6.0"
pollster = "0.4.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rayon = "1.10.0"
tokio = "1.42.0"
wgpu = "25.0"
winit = { version = "0.30" }
